· Moved objects around with z-index so that the footer shows up under the content. That way the thumbnails will show up nicely on the homepage and the work page. Still have to fix the content area on pure content pages.

--- a/assets/docs/less/style.less
+++ b/assets/docs/less/style.less
@@ -90,7 +90,7 @@ a:hover { color: darken(@themecolor, 20%); text-decoration: none; .ease; }
 			position: absolute;
 			top: 0;
 			left: 0;
-			z-index: -1;
+			z-index: 1;
 		}
 		
 		.articleContent {
@@ -100,6 +100,8 @@ a:hover { color: darken(@themecolor, 20%); text-decoration: none; .ease; }
 		width: 100%;
 		text-align: center;
 		padding: 30px;
+		position: relative;
+		z-index: 2;
 		
 		.title {
 			border-bottom: 1px solid white;
@@ -138,6 +140,7 @@ footer {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+	z-index: -1;
 	
 	.copyright {margin-top: 20px;}
 }
